# SkyPro_Lms

./: .env.sample  Dockerfile  coverage_report.txt  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
config/: celery.py  settings.py  urls.py
materials/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_alter_course_options_alter_lesson_options.py  0005_course_price.py  0006_course_updated_at.py
users/: admin.py  constants.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/fixtures/: payments.json
users/management/commands/: csu.py  fill_payments.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_payment_payment_link_payment_status_and_more.py
