[project]
name = "skypro-lms"
version = "0.1.0"
description = ""
authors = [
    {name = "MaxZ",email = "maxzonoff@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "djangorestframework (>=3.17.1,<4.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "django (>=6.0.5,<7.0.0)",
    "django-filter (>=25.2,<26.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "coverage (>=7.14.2,<8.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "stripe (>=15.3.0,<16.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
